--- a/app/src/main/res/layout/listview_item_member_works_project.xml
+++ b/app/src/main/res/layout/listview_item_member_works_project.xml
@@ -160,7 +160,9 @@
                     style="@style/lesser_corners_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/dp_30"
-                    android:layout_margin="@dimen/dp_15"
+                    android:layout_marginRight="@dimen/dp_15"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:layout_marginBottom="@dimen/dp_15"
                     android:minHeight="0dp"
                     android:minWidth="0dp"
                     android:paddingLeft="@dimen/dp_20"
@@ -174,6 +176,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/dp_30"
                     android:layout_marginRight="@dimen/dp_15"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:layout_marginBottom="@dimen/dp_15"
                     android:minHeight="0dp"
                     android:minWidth="0dp"
                     android:paddingLeft="@dimen/dp_20"
@@ -187,6 +191,8 @@
                     style="@style/lesser_corners_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/dp_30"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:layout_marginBottom="@dimen/dp_15"
                     android:minHeight="0dp"
                     android:minWidth="0dp"
                     android:paddingLeft="@dimen/dp_20"
