--- a/app/src/main/res/layout/listview_item_project_team_in_detail.xml
+++ b/app/src/main/res/layout/listview_item_project_team_in_detail.xml
@@ -2,35 +2,37 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/dp_10"
+    android:paddingBottom="@dimen/dp_10"
     android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:padding="@dimen/dp_15"
+        android:paddingTop="@dimen/dp_15"
+        android:paddingBottom="@dimen/dp_15"
+        android:paddingLeft="@dimen/dp_10"
+        android:paddingRight="@dimen/dp_10"
         android:background="@color/color_efeff4">
 
         <TextView
             android:id="@+id/tv_team_name"
             android:layout_width="0dp"
-            android:layout_weight="3"
+            android:layout_weight="2.5"
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:ellipsize="end"
             android:paddingRight="@dimen/dp_10"
             android:gravity="center_vertical"
-            android:textSize="@dimen/sp_16"
+            android:textSize="@dimen/sp_14"
             android:textColor="@color/color_666666"/>
 
         <TextView
             android:id="@+id/tv_vote_count"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="0.8"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_14"
-            android:text="99票"
+            android:textSize="@dimen/sp_12"
             android:gravity="center"
             android:textColor="@color/color_666666"/>
 
@@ -39,7 +41,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_16"
+            android:textSize="@dimen/sp_14"
             android:text="看作品"
             android:gravity="center"
             android:textColor="@color/color_ff0030"/>
@@ -47,12 +49,12 @@
         <TextView
             android:id="@+id/tv_comment"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_16"
-            android:text="写评价"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textColor="@color/color_ffb900"/>
+            android:text="写评价"
+            android:textColor="@color/color_ffb900"
+            android:textSize="@dimen/sp_14" />
     </LinearLayout>
 
 </FrameLayout>
