--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -125,6 +125,45 @@
                 </LinearLayout>
             </RelativeLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_15"
+                android:gravity="right|center_vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="可使用优惠券："
+                    android:textSize="@dimen/sp_14"
+                    android:textColor="@color/color_666666"/>
+                <LinearLayout
+                    android:id="@+id/layout_coupon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/dp_4"
+                    android:paddingLeft="@dimen/dp_10"
+                    android:gravity="center_vertical"
+                    android:paddingRight="@dimen/dp_4"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:background="@drawable/shape_bg_corners_border"
+                    android:paddingTop="@dimen/dp_4">
+
+                    <TextView
+                        android:id="@+id/tv_coupon_name"
+                        android:layout_width="@dimen/dp_140"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/color_666666"
+                        android:textSize="@dimen/sp_14" />
+
+                    <ImageView
+                        android:layout_width="@dimen/dp_24"
+                        android:layout_height="@dimen/dp_24"
+                        android:adjustViewBounds="true"
+                        android:layout_marginLeft="@dimen/dp_15"
+                        android:src="@drawable/more_black"/>
+                </LinearLayout>
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/tv_code_desc"
                 android:layout_width="match_parent"
@@ -132,10 +171,35 @@
                 android:gravity="right"
                 android:visibility="gone"
                 android:textColor="@color/color_666666"
-                android:textSize="@dimen/sp_15"
+                android:textSize="@dimen/sp_14"
                 android:layout_marginBottom="@dimen/dp_15"
                 android:singleLine="true"
                 android:ellipsize="end"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_15"
+                android:layout_gravity="center_vertical|right">
+
+                <TextView
+                    android:id="@+id/tv_discount_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/sp_14"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/color_333333"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/sp_14"
+                    android:layout_toLeftOf="@id/tv_discount_price"
+                    android:layout_marginRight="@dimen/dp_10"
+                    android:layout_gravity="right"
+                    android:textColor="@color/color_666666"
+                    android:text="优惠金额："/>
+            </RelativeLayout>
 
             <View
                 style="@style/horizontal_line" />
@@ -150,14 +214,14 @@
                     android:id="@+id/tv_total_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/dp_16"
+                    android:textSize="@dimen/sp_16"
                    android:layout_alignParentRight="true"
                     android:textColor="@color/color_333333"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/dp_16"
+                    android:textSize="@dimen/sp_16"
                     android:layout_toLeftOf="@id/tv_total_price"
                     android:layout_marginRight="@dimen/dp_10"
                     android:layout_gravity="right"
