--- a/app/src/main/res/layout/activity_work_project_comment.xml
+++ b/app/src/main/res/layout/activity_work_project_comment.xml
@@ -12,6 +12,7 @@
         android:padding="@dimen/dp_15">
 
         <TextView
+            android:id="@+id/tv_tutor_comment_tip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="导师点评："
@@ -27,13 +28,14 @@
             android:textSize="@dimen/sp_16" />
 
         <View
+            android:id="@+id/line_tutor_comment"
             style="@style/horizontal_line"
-            android:layout_marginTop="@dimen/dp_15" />
+            android:layout_marginTop="@dimen/dp_15"
+            android:layout_marginBottom="@dimen/dp_15"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_15"
             android:text="企业点评："
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_16" />
