--- a/app/src/main/res/layout/activity_project_work_detail.xml
+++ b/app/src/main/res/layout/activity_project_work_detail.xml
@@ -44,6 +44,14 @@
                 android:verticalSpacing="@dimen/dp_10"
                 android:horizontalSpacing="@dimen/dp_10"
                 android:scrollbars="none" />
+
+            <include
+                android:id="@+id/layout_photo_empty"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                layout="@layout/layout_nodata_in_content" />
         </LinearLayout>
 
         <View
@@ -73,6 +81,14 @@
                 android:verticalSpacing="@dimen/dp_10"
                 android:horizontalSpacing="@dimen/dp_10"
                 android:scrollbars="none" />
+
+            <include
+                android:id="@+id/layout_doc_empty"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                layout="@layout/layout_nodata_in_content" />
         </LinearLayout>
 
         <View
@@ -102,6 +118,14 @@
                 android:verticalSpacing="@dimen/dp_10"
                 android:horizontalSpacing="@dimen/dp_10"
                 android:scrollbars="none" />
+
+            <include
+                android:id="@+id/layout_team_empty"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                layout="@layout/layout_nodata_in_content" />
         </LinearLayout>
 
         <View
