--- a/app/src/main/res/layout/activity_works_project_detail.xml
+++ b/app/src/main/res/layout/activity_works_project_detail.xml
@@ -301,6 +301,16 @@
                 android:layout_marginRight="@dimen/dp_15"
                 android:layout_marginTop="@dimen/dp_15" />
 
+            <include
+                android:id="@+id/layout_empty"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginRight="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_15"
+                layout="@layout/layout_nodata_in_content" />
+
             <View
                 android:id="@+id/line_project_team"
                 android:layout_marginTop="@dimen/dp_15"
