--- a/app/src/main/res/layout/activity_works_project_detail.xml
+++ b/app/src/main/res/layout/activity_works_project_detail.xml
@@ -274,10 +274,11 @@
                 android:textSize="@dimen/sp_14"
                 android:paddingRight="@dimen/dp_15"
                 android:paddingLeft="@dimen/dp_15"
-                android:visibility="gone"
-                android:layout_marginBottom="@dimen/dp_15"/>
+                android:visibility="gone"/>
 
             <View
+                android:id="@+id/line_project_team"
+                android:visibility="gone"
                 style="@style/horizontal_line"/>
 
             <TextView
@@ -312,8 +313,48 @@
                 layout="@layout/layout_nodata_in_content" />
 
             <View
-                android:id="@+id/line_project_team"
-                android:layout_marginTop="@dimen/dp_15"
+                android:id="@+id/line_rank"
+                android:visibility="gone"
+                style="@style/horizontal_line"/>
+
+            <RelativeLayout
+                android:id="@+id/layout_rank"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:padding="@dimen/dp_15">
+                <TextView
+                    android:id="@+id/tv_rank_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:text="收起"
+                    android:textColor="@color/color_999999"
+                    android:textSize="@dimen/sp_14"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@id/tv_rank_icon"
+                    android:text="获奖作品与评价"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_16"/>
+            </RelativeLayout>
+
+            <cn.com.mangopi.android.ui.widget.ListView
+                android:id="@+id/lv_rank"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:divider="@color/color_efeff4"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginRight="@dimen/dp_15"
+                android:dividerHeight="@dimen/dp_0.5" />
+
+            <View
+                android:id="@+id/line_courses"
                 android:visibility="gone"
                 style="@style/horizontal_line"/>
 
@@ -344,7 +385,7 @@
             </LinearLayout>
 
             <View
-                android:id="@+id/line_courses"
+                android:id="@+id/line_courses_top"
                 android:layout_marginTop="@dimen/dp_15"
                 style="@style/horizontal_line"/>
 
