--- a/app/src/main/res/layout/activity_order_schedule_calendar.xml
+++ b/app/src/main/res/layout/activity_order_schedule_calendar.xml
@@ -2,7 +2,85 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/color_efeff4"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/layout_top"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_49"
+        android:background="@color/color_f6f6f7"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <ImageButton
+            android:id="@+id/ib_left"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:adjustViewBounds="true"
+            style="@style/repple_out_backguound"
+            android:src="@drawable/back"
+            android:paddingBottom="@dimen/dp_11.5"
+            android:paddingTop="@dimen/dp_11.5"
+            android:paddingRight="@dimen/dp_15"
+            android:paddingLeft="@dimen/dp_15"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:layout_height="@dimen/dp_31">
+            <ImageView
+                android:id="@+id/iv_last"
+                android:layout_width="@dimen/dp_31"
+                android:layout_height="@dimen/dp_16"
+                android:paddingLeft="@dimen/dp_15"
+                android:adjustViewBounds="true"
+                android:src="@drawable/left"/>
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp_18"
+                android:layout_marginLeft="@dimen/dp_6"
+                android:layout_marginRight="@dimen/dp_6"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:layout_centerInParent="true"/>
+
+            <ImageView
+                android:id="@+id/iv_next"
+                android:layout_width="@dimen/dp_31"
+                android:layout_height="@dimen/dp_16"
+                android:paddingRight="@dimen/dp_15"
+                android:adjustViewBounds="true"
+                android:src="@drawable/right"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_today"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            style="@style/repple_out_backguound"
+            android:gravity="center"
+            android:text="今天"
+            android:paddingBottom="@dimen/dp_11.5"
+            android:paddingTop="@dimen/dp_11.5"
+            android:paddingLeft="@dimen/dp_15"
+            android:paddingRight="@dimen/dp_15"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0.5"
+            android:layout_alignParentBottom="true"
+            android:background="@color/color_cccccc"/>
+    </RelativeLayout>
 
     <RelativeLayout
         android:background="@android:color/white"
@@ -53,12 +131,18 @@
             android:padding="@dimen/dp_10"
             android:text="查看这个时间段的订单"
             android:textSize="@dimen/sp_14" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0.5"
+            android:background="@color/color_cccccc"/>
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/layout_bottom"
+        android:layout_below="@id/layout_top"
         android:fillViewport="true">
 
         <LinearLayout
