--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -156,11 +156,11 @@
                         android:textSize="@dimen/sp_14" />
 
                     <ImageView
-                        android:layout_width="@dimen/dp_24"
-                        android:layout_height="@dimen/dp_24"
+                        android:layout_width="@dimen/dp_16"
+                        android:layout_height="@dimen/dp_16"
                         android:adjustViewBounds="true"
                         android:layout_marginLeft="@dimen/dp_15"
-                        android:src="@drawable/more_black"/>
+                        android:src="@drawable/open"/>
                 </LinearLayout>
             </LinearLayout>
 
