--- a/app/src/main/res/layout/fragment_order_list.xml
+++ b/app/src/main/res/layout/fragment_order_list.xml
@@ -17,20 +17,28 @@
             mango:ptrMode="both"
             mango:ptrShowIndicator="false" />
 
-        <TextView
-            android:id="@+id/tv_see_plan"
+        <FrameLayout
+            android:id="@+id/layout_see_plan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:paddingBottom="@dimen/dp_15"
-            android:paddingTop="@dimen/dp_15"
-            android:text="查看我的日程安排"
-            android:textColor="@color/color_ffb900"
-            android:textSize="@dimen/sp_16"
-            android:visibility="gone" />
+            android:visibility="gone">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:paddingBottom="@dimen/dp_15"
+                android:paddingTop="@dimen/dp_15"
+                android:text="查看我的日程安排"
+                android:textColor="@color/color_ffb900"
+                android:textSize="@dimen/sp_16" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_0.5"
+                android:background="@color/color_cccccc"/>
+        </FrameLayout>
     </RelativeLayout>
 
     <include
