--- a/app/src/main/res/layout/listview_item_rank_actor_in_detail.xml
+++ b/app/src/main/res/layout/listview_item_rank_actor_in_detail.xml
@@ -60,4 +60,54 @@
         android:visibility="visible"
         android:textSize="@dimen/sp_16" />
 
+    <View
+        android:id="@+id/line_tutor_comment"
+        style="@style/horizontal_line"
+        android:visibility="gone"
+        android:layout_marginTop="@dimen/dp_15" />
+
+    <TextView
+        android:id="@+id/tv_tutor_comment_tip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_16"
+        android:visibility="gone"
+        android:layout_marginTop="@dimen/dp_15"
+        android:layout_marginBottom="@dimen/dp_15"
+        android:text="导师点评："
+        android:textColor="@color/color_333333"/>
+
+    <TextView
+        android:id="@+id/tv_tutor_comment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/color_666666"
+        android:textSize="@dimen/sp_14"
+        android:visibility="gone"/>
+
+    <View
+        android:id="@+id/line_company_comment"
+        style="@style/horizontal_line"
+        android:visibility="gone"
+        android:layout_marginTop="@dimen/dp_15" />
+
+    <TextView
+        android:id="@+id/tv_company_comment_tip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_16"
+        android:layout_marginTop="@dimen/dp_15"
+        android:layout_marginBottom="@dimen/dp_15"
+        android:text="企业点评："
+        android:visibility="gone"
+        android:textColor="@color/color_333333"/>
+
+    <TextView
+        android:id="@+id/tv_company_comment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/color_666666"
+        android:textSize="@dimen/sp_14"
+        android:visibility="gone"/>
+
 </LinearLayout>
