--- a/app/src/main/res/layout/activity_pay_result.xml
+++ b/app/src/main/res/layout/activity_pay_result.xml
@@ -13,10 +13,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_25"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/icon_success"
             android:adjustViewBounds="true"/>
 
         <TextView
+            android:id="@+id/tv_result_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -26,11 +26,11 @@
             android:textSize="@dimen/sp_16"/>
 
         <TextView
+            android:id="@+id/tv_pay_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/dp_10"
-            android:text="99元"
             android:textColor="@color/color_333333"
             android:textSize="26sp"/>
 
@@ -51,6 +51,7 @@
                 android:textSize="@dimen/sp_14"
                 android:text="商品名称："/>
             <TextView
+                android:id="@+id/tv_order_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
@@ -62,6 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_15"
             android:layout_marginLeft="@dimen/dp_15"
+            android:visibility="gone"
             android:layout_marginRight="@dimen/dp_15">
             <TextView
                 android:layout_width="wrap_content"
@@ -89,6 +91,7 @@
                 android:textSize="@dimen/sp_14"
                 android:text="订单号："/>
             <TextView
+                android:id="@+id/tv_order_no"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
@@ -108,6 +111,7 @@
                 android:textSize="@dimen/sp_14"
                 android:text="支付方式："/>
             <TextView
+                android:id="@+id/tv_channel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
@@ -127,6 +131,7 @@
                 android:textSize="@dimen/sp_14"
                 android:text="交易时间："/>
             <TextView
+                android:id="@+id/tv_pay_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
