--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -84,46 +84,48 @@
             <View
                 style="@style/horizontal_line" />
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/dp_15"
+                android:orientation="horizontal"
+                android:gravity="right|center_vertical"
                 android:layout_marginTop="@dimen/dp_15">
-                <Button
-                    android:id="@+id/btn_use"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minHeight="0dp"
-                    android:paddingTop="@dimen/dp_8"
-                    android:paddingBottom="@dimen/dp_8"
-                    style="@style/lesser_corners_btn"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginLeft="@dimen/dp_15"
-                    android:textSize="@dimen/sp_14"
-                    android:text="@string/use"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_35"
-                    android:layout_toLeftOf="@id/btn_use"
-                    android:gravity="center_vertical|right">
+
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:text="优惠码："
                         android:textSize="@dimen/sp_14"
                         android:textColor="@color/color_666666"/>
                     <EditText
                         android:id="@+id/et_promotion_code"
-                        android:layout_width="@dimen/dp_140"
-                        android:layout_height="match_parent"
+                        android:layout_width="@dimen/dp_160"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="@dimen/dp_6"
+                        android:paddingBottom="@dimen/dp_6"
                         android:singleLine="true"
                         android:paddingLeft="@dimen/dp_10"
                         android:paddingRight="@dimen/dp_10"
+                        android:hint="请输入派号"
+                        android:textColorHint="@color/color_999999"
                         android:background="@drawable/shape_bg_corners_border"
                         android:textColor="@color/color_666666"
-                        android:textSize="@dimen/sp_16"/>
-                </LinearLayout>
-            </RelativeLayout>
+                        android:textSize="@dimen/sp_14"/>
+
+                <Button
+                    android:id="@+id/btn_use"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="0dp"
+                    android:paddingTop="@dimen/dp_6"
+                    android:paddingBottom="@dimen/dp_6"
+                    style="@style/lesser_corners_btn"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:textSize="@dimen/sp_14"
+                    android:text="@string/use"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -131,26 +133,25 @@
                 android:layout_marginBottom="@dimen/dp_15"
                 android:gravity="right|center_vertical">
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="可使用优惠券："
+                    android:text="优惠券："
                     android:textSize="@dimen/sp_14"
                     android:textColor="@color/color_666666"/>
                 <LinearLayout
                     android:id="@+id/layout_coupon"
-                    android:layout_width="wrap_content"
+                    android:layout_width="235dp"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="@dimen/dp_4"
+                    android:paddingBottom="@dimen/dp_6"
                     android:paddingLeft="@dimen/dp_10"
                     android:gravity="center_vertical"
                     android:paddingRight="@dimen/dp_4"
-                    android:layout_marginLeft="@dimen/dp_15"
                     android:background="@drawable/shape_bg_corners_border"
-                    android:paddingTop="@dimen/dp_4">
+                    android:paddingTop="@dimen/dp_6">
 
                     <TextView
                         android:id="@+id/tv_coupon_name"
-                        android:layout_width="@dimen/dp_140"
+                        android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:textColor="@color/color_666666"
                         android:textSize="@dimen/sp_14" />
