--- a/app/src/main/res/layout/gridview_item_add_picture.xml
+++ b/app/src/main/res/layout/gridview_item_add_picture.xml
@@ -7,7 +7,7 @@
         android:id="@+id/layout_add"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/shape_dotted_border">
+        android:background="@drawable/icon_add">
     </FrameLayout>
 
     <ImageView
