--- a/app/src/main/res/layout/listview_item_class_list.xml
+++ b/app/src/main/res/layout/listview_item_class_list.xml
@@ -4,13 +4,22 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/iv_state"
+        android:layout_width="@dimen/dp_22"
+        android:layout_height="@dimen/dp_22"
+        android:adjustViewBounds="true"/>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:descendantFocusability="blocksDescendants"
         android:orientation="vertical"
-        android:padding="@dimen/dp_15">
+        android:paddingLeft="@dimen/dp_15"
+        android:paddingRight="@dimen/dp_15"
+        android:paddingBottom="@dimen/dp_15"
+        android:paddingTop="0dp">
 
         <TextView
             android:id="@+id/tv_course_title"
