--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -74,5 +74,6 @@
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_2">2dp</dimen>
     <dimen name="dp_100">100dp</dimen>
+    <dimen name="dp_375">375dp</dimen>
 
 </resources>
