--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -220,6 +220,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_15"
+            android:lineSpacingExtra="5dp"
             android:gravity="center"
             android:textColor="@color/color_666666"
             android:textSize="@dimen/sp_14"
@@ -230,7 +231,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/dp_15"
+            android:layout_marginTop="@dimen/dp_25"
             android:background="@drawable/selector_btn_bg_important_corners"
             android:minHeight="0dp"
             android:minWidth="0dp"
