--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -192,10 +192,11 @@
                 android:id="@+id/tv_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_12"
                 android:textColor="@color/color_666666"
                 android:paddingLeft="@dimen/dp_15"
                 android:paddingRight="@dimen/dp_15"
+                android:lineSpacingExtra="@dimen/dp_2"
                 android:textSize="@dimen/sp_14" />
 
             <View style="@style/margin_horizontal_line"
@@ -214,9 +215,10 @@
                 android:id="@+id/tv_type_method"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_12"
                 android:textColor="@color/color_666666"
                 android:paddingLeft="@dimen/dp_15"
+                android:lineSpacingExtra="@dimen/dp_2"
                 android:paddingRight="@dimen/dp_15"
                 android:textSize="@dimen/sp_14" />
 
@@ -236,8 +238,9 @@
                 android:id="@+id/tv_type_explains"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_12"
                 android:textColor="@color/color_666666"
+                android:lineSpacingExtra="@dimen/dp_2"
                 android:paddingLeft="@dimen/dp_15"
                 android:paddingRight="@dimen/dp_15"
                 android:textSize="@dimen/sp_14" />
