--- a/app/src/main/res/layout/activity_publish_dynamics.xml
+++ b/app/src/main/res/layout/activity_publish_dynamics.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_15"
             android:layout_marginLeft="@dimen/dp_15"
+            android:gravity="right"
             android:layout_marginRight="@dimen/dp_15"
             android:text="@string/input_num"
             android:textColor="@color/color_999999"
