--- a/app/src/main/res/layout/activity_upgrade_to_company.xml
+++ b/app/src/main/res/layout/activity_upgrade_to_company.xml
@@ -195,7 +195,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="职业(身份)"
+                        android:text="职业身份"
                         android:textColor="@color/color_666666"
                         android:textSize="@dimen/dp_16" />
                     <include layout="@layout/layout_star_code" />
