--- a/app/src/main/res/layout/layout_header_teacher_detail.xml
+++ b/app/src/main/res/layout/layout_header_teacher_detail.xml
@@ -45,9 +45,10 @@
         android:id="@+id/tv_tutor_intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_12"
         android:layout_marginBottom="@dimen/dp_15"
         android:textColor="@color/color_666666"
+        android:lineSpacingExtra="@dimen/dp_2"
         android:paddingLeft="@dimen/dp_15"
         android:paddingRight="@dimen/dp_15"
         android:textSize="@dimen/sp_14" />
