--- a/app/src/main/res/layout/layout_item_update_role.xml
+++ b/app/src/main/res/layout/layout_item_update_role.xml
@@ -31,6 +31,7 @@
             android:id="@+id/tv_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:lineSpacingExtra="@dimen/dp_2"
             android:textColor="@color/color_666666"
             android:layout_marginTop="@dimen/dp_5"
             android:textSize="@dimen/sp_14"/>
