--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -207,11 +207,8 @@
             android:id="@+id/grid_material"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_marginRight="@dimen/dp_15"
             android:layout_marginTop="@dimen/dp_15"
-            android:rowCount="3"
-            android:columnCount="3" />
+            android:columnCount="5" />
 
         <View style="@style/horizontal_line"
             android:layout_marginTop="@dimen/dp_15"/>
@@ -228,19 +225,13 @@
 
         <Button
             android:id="@+id/btn_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/dp_25"
             android:background="@drawable/selector_btn_bg_important_corners"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:paddingBottom="@dimen/dp_8"
-            android:paddingLeft="@dimen/dp_20"
-            android:paddingRight="@dimen/dp_20"
             android:layout_marginBottom="@dimen/dp_15"
-            android:paddingTop="@dimen/dp_8"
-            android:text="保 存"
+            android:text="保存"
             android:textColor="@drawable/selector_text_color_important_btn"
             android:textSize="@dimen/sp_14" />
     </LinearLayout>
