--- a/app/src/main/res/layout/layout_home_setting_one.xml
+++ b/app/src/main/res/layout/layout_home_setting_one.xml
@@ -24,12 +24,11 @@
             android:layout_centerVertical="true"
             android:gravity="center_vertical">
 
-            <View
-                android:layout_width="@dimen/dp_4"
+            <ImageView
+                android:layout_width="@dimen/dp_8"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/dp_2"
-                android:layout_marginTop="@dimen/dp_2"
-                android:background="@color/color_ffb900" />
+                android:adjustViewBounds="true"
+                android:background="@drawable/dianzhui" />
 
             <TextView
                 android:id="@+id/tv_title1"
