--- a/app/src/main/res/layout/layout_listview_header_teacher.xml
+++ b/app/src/main/res/layout/layout_listview_header_teacher.xml
@@ -30,12 +30,11 @@
         android:paddingLeft="@dimen/dp_15"
         android:layout_marginTop="@dimen/dp_15"
         android:layout_marginBottom="@dimen/dp_10">
-        <View
-            android:layout_width="@dimen/dp_4"
+        <ImageView
+            android:layout_width="@dimen/dp_8"
             android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/dp_2"
-            android:layout_marginTop="@dimen/dp_2"
-            android:background="@color/color_ffb900" />
+            android:adjustViewBounds="true"
+            android:background="@drawable/dianzhui" />
 
         <TextView
             android:layout_width="wrap_content"
