--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -57,6 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableRight="@drawable/icon_more"
+                android:drawablePadding="@dimen/dp_8"
                 android:gravity="right|center"
                 android:hint="请选择"
                 android:textColor="@color/color_666666"
@@ -88,6 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableRight="@drawable/icon_more"
+                android:drawablePadding="@dimen/dp_8"
                 android:gravity="right|center"
                 android:hint="请选择"
                 android:textColor="@color/color_666666"
@@ -153,6 +155,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableRight="@drawable/icon_more"
+                    android:drawablePadding="@dimen/dp_8"
                     android:gravity="right|center"
                     android:textColor="@color/color_666666"
                     android:textColorHint="@color/color_999999"
@@ -163,6 +166,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableRight="@drawable/icon_more"
+                    android:drawablePadding="@dimen/dp_8"
                     android:gravity="right|center"
                     android:textColor="@color/color_666666"
                     android:textColorHint="@color/color_999999"
