--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -74,8 +74,7 @@
             android:layout_marginLeft="@dimen/dp_15"
             android:layout_marginTop="@dimen/dp_50"
             android:layout_marginRight="@dimen/dp_15"
-            style="@style/important_corners_btn"
-            android:textColor="@android:color/white"
+            android:background="@android:color/white"
             android:text="退出登录"/>
     </LinearLayout>
 </ScrollView>
