--- a/app/src/main/res/layout/listview_item_favlist.xml
+++ b/app/src/main/res/layout/listview_item_favlist.xml
@@ -73,5 +73,6 @@
 
     <View
         android:id="@+id/v_line"
-        style="@style/horizontal_line" />
+        style="@style/horizontal_line"
+        android:layout_height="@dimen/dp_10"/>
 </LinearLayout>
