--- a/app/src/main/res/layout/listview_item_messagelist.xml
+++ b/app/src/main/res/layout/listview_item_messagelist.xml
@@ -93,5 +93,6 @@
 
     <View
         android:id="@+id/v_line"
-        style="@style/horizontal_line" />
+        style="@style/horizontal_line"
+        android:layout_height="@dimen/dp_10"/>
 </LinearLayout>
