--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,15 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="lesser_corners_666_btn">
+        <item name="android:layout_height">@dimen/dp_42</item>
+        <item name="android:textSize">@dimen/sp_16</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@drawable/selector_text_color_lesser_666_btn</item>
+        <item name="android:background">@drawable/selector_btn_bg_lesser_666_corners</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="rect_btn">
         <item name="android:layout_height">@dimen/dp_42</item>
         <item name="android:textSize">@dimen/sp_16</item>
